@@ -263,7 +263,7 @@ Repository:
         branch5 = tree5.branch
         out, err = self.run_bzr('info -v lightcheckout')
         self.assertEqualDiff(
-"""Lightweight checkout (format: dirstate or dirstate-tags or knitpack-experimental)
+"""Lightweight checkout (format: dirstate or dirstate-tags or pack0.92)
 Location:
   light checkout root: lightcheckout
    checkout of branch: standalone
@@ -441,7 +441,7 @@ Repository:
         # Out of date lightweight checkout
         out, err = self.run_bzr('info lightcheckout --verbose')
         self.assertEqualDiff(
-"""Lightweight checkout (format: dirstate or dirstate-tags or knitpack-experimental)
+"""Lightweight checkout (format: dirstate or dirstate-tags or pack0.92)
 Location:
   light checkout root: lightcheckout
    checkout of branch: standalone
@@ -579,7 +579,7 @@ Repository:
         datestring_first = format_date(rev.timestamp, rev.timezone)
         out, err = self.run_bzr('info tree/lightcheckout --verbose')
         self.assertEqualDiff(
-"""Lightweight checkout (format: dirstate or dirstate-tags or knitpack-experimental)
+"""Lightweight checkout (format: dirstate or dirstate-tags or pack0.92)
 Location:
   light checkout root: tree/lightcheckout
    checkout of branch: repo/branch
@@ -710,7 +710,7 @@ Repository:
         datestring_last = format_date(rev.timestamp, rev.timezone)
         out, err = self.run_bzr('info tree/lightcheckout --verbose')
         self.assertEqualDiff(
-"""Lightweight checkout (format: dirstate or dirstate-tags or knitpack-experimental)
+"""Lightweight checkout (format: dirstate or dirstate-tags or pack0.92)
 Location:
   light checkout root: tree/lightcheckout
    checkout of branch: repo/branch
@@ -1149,7 +1149,7 @@ Repository:
             (False, True): 'Lightweight checkout',
             (False, False): 'Checkout',
             }[(shared_repo is not None, light_checkout)]
-        format = {True: 'dirstate or dirstate-tags or knitpack-experimental',
+        format = {True: 'dirstate or dirstate-tags or pack0.92',
                   False: 'dirstate'}[light_checkout]
         if repo_locked or branch_locked or tree_locked:
             def locked_message(a_bool):
